# astropath-dns-relay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THIRD-PARTY  alembic.ini  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  container-image-build.yml  supply-chain.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_m2_baseline_schema.py
deploy/ansible/: README.md  host_prerequisites.md
deploy/ansible/templates/: astropath.nftables.nft.j2  astropath.nginx.conf.j2  fw-astropath.compose.yml.j2
deploy/k8s/: RUNBOOK.md  validate.sh
deploy/k8s/cert-manager/: clusterissuer-letsencrypt-prod.yaml  clusterissuer-letsencrypt-staging.yaml  helm-values.cert-manager.yaml  networkpolicy-cert-manager-egress.yaml  tsig-secret.example.yaml
deploy/k8s/traefik/: certificate-wildcard.yaml
docs/: he-propagation-diagnostics.md  kek-rotation-runbook.md  route53-iam-policy.json  route53-iam.md
frontend/: .gitkeep  .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: Layout.tsx  Modal.tsx  OneTimeSecretModal.tsx  SchemaForm.tsx
frontend/src/lib/: format.ts  notice.ts  useResource.ts
frontend/src/pages/: BackendsPage.tsx  (+5 more)
src/astropath/: __init__.py  assembly.py  audit.py  bootstrap.py  cache.py  correlation.py  crypto.py  db.py  logging_config.py  main.py  migrate_bootstrap.py  models.py  observability.py  rotation.py  settings.py  startup.py  store.py  supervisor.py
tests/: _api.py  _db.py  _fakes.py  conftest.py  test_accept_auth_family.py  test_accept_dispatcher.py  test_accept_tsig_roundtrip.py  test_accept_write_surface.py  test_alembic.py  test_api_app.py  test_api_auth.py  test_api_auth_unit.py  test_api_backends.py  test_api_cache_refresh.py  test_api_csrf.py  test_api_docs_metrics.py  test_api_domains.py  test_api_events.py  test_api_login.py  test_api_one_time_secrets.py  test_api_password.py  test_api_providers.py  test_api_proxy_headers.py  test_api_session.py  test_api_spa_serving.py  test_api_tokens.py  test_api_tsig.py  test_argon2.py  test_audit.py  test_bootstrap.py  test_bootstrap_cli.py  test_cache.py  test_correlation.py  test_crypto.py  test_crypto_asserts.py  test_db.py  test_dispatcher.py  test_dnspython_asserts.py  test_logging.py  test_main.py  (+23 more)
tests/contract/: test_miekg_contract.py
(+30 files in other folders)
