# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astropath-dns-relay"
version = "0.1.0"
description = "Self-hosted ACME DNS-01 solver gateway (RFC2136/TSIG front end for cert-manager)."
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Saad Ali", email = "engr.saadali786@gmail.com" }]
keywords = [
    "acme",
    "dns-01",
    "cert-manager",
    "rfc2136",
    "tsig",
    "letsencrypt",
    "hurricane-electric",
    "route53",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.122.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "sqlalchemy>=2.0,<2.1",
    "sqlmodel>=0.0.22",
    "dnspython>=2,<3",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "httpx>=0.27,<1",
    "prometheus-client>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.12",
    "aiobotocore>=2.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "testcontainers>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astropath"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]         # line length is owned by black

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]
namespace_packages = true
explicit_package_bases = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source_pkgs = ["astropath"]
branch = true
